--- a/css/styles_general.css
+++ b/css/styles_general.css
@@ -23,7 +23,8 @@
     justify-content: center;
     align-items: center;
     width: 100%;
-    min-height: 0;
+    min-height: 100vh;
+    max-height: 500vh;
     margin-top: 5vh;
 }
 
