--- a/css/styles_aboutme_desktop.css
+++ b/css/styles_aboutme_desktop.css
@@ -224,9 +224,9 @@
                         width: 0.1rem;
                         background-color: gainsboro;
                     }
-                    #div_WhatIStudy_Desktop_Sec1 > h2{ margin-bottom: 2rem; }
-                    #div_WhatIStudy_Desktop_Sec2 > h2{ margin-bottom: 2rem; }
-                    #div_WhatIStudy_Desktop_Sec1, #div_WhatIStudy_Desktop_Sec2{ display: flex;flex-direction: column;justify-content: start;align-items: center;}
+                    #div_WhatIStudy_Desktop_Sec1 > h2{ margin-top: 2rem; }
+                    #div_WhatIStudy_Desktop_Sec2 > h2{ margin-top: 2rem; }
+                    #div_WhatIStudy_Desktop_Sec1, #div_WhatIStudy_Desktop_Sec2{ display: flex;flex-direction: column;justify-content: start;align-items: center; gap:1rem;}
 
 
 
@@ -317,6 +317,8 @@
         #cardAboutMe_Desktop_sectionButtons_btnWhoIAm, #cardAboutMe_Desktop_sectionButtons_btnWhatIDo, 
         #cardAboutMe_Desktop_sectionButtons_btnWhatCanIDo, #cardAboutMe_Desktop_sectionButtons_btnWhatIStudy{ font-size: 1.2rem; } 
         #cardAboutMe_Desktop_sectionContent * { font-size: calc(100% - 0.01rem); }
+                    #div_WhatIStudy_Desktop_Sec1 > h2{ margin-top: 0.5rem; }
+                    #div_WhatIStudy_Desktop_Sec2 > h2{ margin-top: 0.5rem; }
     }
     @media (max-width:1200px){
         #div_WhatCanIDo_Desktop_Sec2 > div{ gap: 1.5rem;}
@@ -332,9 +334,9 @@
         #cardAboutMe_Desktop_sectionContent * { font-size: calc(100% - 0.02rem); }
         #div_WhatCanIDo_Desktop_Sec2 > div{ gap: 1.2rem; }   
         .formacionDIV{ scale: 0.90; }
-        .formacionDIVComplementary{ scale: 0.90; }        
+        .formacionDIVComplementary{ scale: 0.90; }      
         #div_WhatIStudy_Desktop_Sec2 > div{ gap: 0.4rem; }
-        #div_WhatIStudy_Desktop_Section{ display: grid; grid-template-columns: 29% 1% 70%; }
+        #div_WhatIStudy_Desktop_Section{ display: grid; }
     }
     @media (max-width:1050px){
         #cardAboutMe_Desktop{ max-height: 85vh;}
