--- a/css/styles_aboutme_mobile.css
+++ b/css/styles_aboutme_mobile.css
@@ -4,10 +4,10 @@
 #divMainAboutMe_Mobile_title, #cardAboutMe_Mobile, #cardAboutMe_Mobile_sectionContent, #subDiv_AndroidSec, #screenshotsOfApps_Div, #imgAndroidArrowDown{
     width: 100%;
 }
-#divMainAboutMe_Mobile_title, #divMainAboutMe_Mobile_content, #div_whoIAm_Mobile_Photo, #div_whoIAm_Mobile_Text, #div_whatIDo_Mobile_Btns, #div_whatIDo_Mobile_Btns button{
+#divMainAboutMe_Mobile_title, .divMainAboutMe_Mobile_content, #div_whoIAm_Mobile_Photo, #div_whoIAm_Mobile_Text, #div_whatIDo_Mobile_Btns, #div_whatIDo_Mobile_Btns button{
     height: 100%;
 }
-#divMainAboutMe_Mobile_title, #divMainAboutMe_Mobile_content{
+#divMainAboutMe_Mobile_title, .divMainAboutMe_Mobile_content{
     flex:1; 
 }
 
@@ -57,6 +57,7 @@
     justify-content: flex-start;  /* empieza desde arriba */
     align-items: center;          /* centra horizontal */
     gap: 2rem;
+    width: 90%;
     margin-left: 5%;
     margin-right: 5%;
     min-height: auto; /* ya no fuerza 100vh ni más */
@@ -70,20 +71,21 @@
         align-items: center;
     }
     /* Contenido de la pagina */
-    #divMainAboutMe_Mobile_content {
+    .divMainAboutMe_Mobile_content {
+        width: 100%;
         display: grid;
         grid-template-rows: auto; /* crecer según el contenido */
         margin: 0 auto;
-        width: 100%;
+        padding: 0;
     }
         /* Card de about me -------------------------------------------------------------*/
         #cardAboutMe_Mobile {
+            width: 100%;
             border-radius: 3rem;
             background-color: rgba(0, 0, 0, 0.35);
             display: grid;
             grid-template-rows: auto; /* se ajusta al contenido */
             padding: 0; /* opcional */
-            width: 100%;
         }
             /* Seccion de botones */
             #cardAboutMe_Mobile_sectionButtons {
@@ -180,6 +182,7 @@
                     grid-template-rows: 50% 50%;  
                     padding: 2rem;  
                     gap: 2rem;
+                    padding-bottom: 4rem;
                 }
                 #div_WhatCanIDo_Mobile_Section > div > div:empty {
                     display: flex;
@@ -265,6 +268,7 @@
                     padding-top: 1rem;
                     margin-left: 5%;
                     margin-right: 5%;
+                    padding-bottom: 1rem;
                 }
                 #div_WhatIStudy_Mobile_Sec1 > .formacionDIV{
                     margin-left: 1%;
@@ -283,4 +287,70 @@
 
 
 
+    #sectionDonwloadCV_Mobile {
+        display: flex;
+        flex:1;
+        margin-top: 5%;
+        bottom: 3%;
+        right: 5%;
+        justify-content: center;
+        align-items: center;
+    }
+        #buttonDonwloadCV_Mobile {
+            background-color: rgba(12, 97, 175, 0.13);
+            text-align: center;
+            display: flex;
+            flex-direction: row;
+            gap: 0.75rem;
+            padding: 1rem;
+            border-radius: 1rem;
+            color: white;
+            animation: bounceScale 1s cubic-bezier(0.28, 0.84, 0.42, 1) forwards;
+        }
+        #buttonDonwloadCV_Mobile img{
+            max-width: 1.5rem;
+        }
+        @keyframes bounceScale {
+            0% {
+                transform: scale(1);
+            }
+            25% {
+                transform: scale(2);
+            }
+            40% {
+                transform: scale(0.7);
+            }
+            55% {
+                transform: scale(1.4);
+            }
+            70% {
+                transform: scale(0.85);
+            }
+            80% {
+                transform: scale(1.2);
+            }
+            90% {
+                transform: scale(0.95);
+            }
+            95% {
+                transform: scale(1);
+            }
+            100% {
+                transform: scale(0.9);
+            }
+        }
+
+
+
+        @media (max-width: 450px) {
+            #sectionDonwloadCV_Mobile {
+                display: flex;
+                flex:1;
+                margin-top: 0;
+                bottom: 3%;
+                right: 5%;
+                justify-content: center;
+                align-items: center;
+            }        
+        }
 
