--- a/css/styles_body.css
+++ b/css/styles_body.css
@@ -7,7 +7,9 @@
     overflow-y: scroll;
 }
 
-body,html{height: auto;}
+body,html{
+    height: auto;
+}
 
 .bodyGeneral{
     /* Flex */
@@ -32,6 +34,7 @@ body,html{height: auto;}
 .bodyLoading{
     background-color: black;
     overflow-y: hidden;
+    max-height: 100vh;
 }
 
 
