--- a/css/styles_loadingPage.css
+++ b/css/styles_loadingPage.css
@@ -10,7 +10,7 @@
     align-items: center;
     /* Dimensiones */
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     /* Otros */
     overflow-x: hidden;
     overflow-y: hidden;
