--- a/css/styles_body.css
+++ b/css/styles_body.css
@@ -1,14 +1,9 @@
 
 /* Body y HTML ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ */
-.bodyOverFlowYHidden{
-    overflow-y: hidden;
-}
-.bodyOverFlowYScroll{
-    overflow-y: scroll;
-}
 
 body,html{
-    height: auto;
+    height: 100%;
+    min-height: 100vh;
 }
 
 .bodyGeneral{
