--- a/css/styles_home.css
+++ b/css/styles_home.css
@@ -17,7 +17,7 @@
         align-items: center;
     }
 #pageHome_DivVertical{
-    min-height: 100vh;
+    height: auto;
     display: flex;
     flex-direction: column;
     justify-content: top;
