--- a/css/styles_home.css
+++ b/css/styles_home.css
@@ -188,11 +188,11 @@
 
 
         #pageHome_CardLastArticlesV{
-            width: 76%;
-            margin-left: 12%;
-            margin-right: 12%;
+            width: 84%;
+            margin-left: 8%;
+            margin-right: 8%;
             border-radius: 1em;
-            max-height: 40vh;
+            height: auto;
             padding: 0;
             background-color: rgba(0, 0, 0, 0.25);  /* negro casi opaco */
             display: flex;
@@ -326,6 +326,9 @@
     }
 }
 @media (max-width: 800px) {
+    #pageHome_CardLastArticles_textsSecionV p{ font-size: 0.8rem;}
+    #pageHome_CardLastArticles_textsSecionV h3{ font-size: 0.9rem;} 
+    #pageHome_CardLastArticles_textsSecionV a {font-size: 0.8rem;}
     .dot, .dotScaled, #pageHome_CardLastArticles_arrorLeft, #pageHome_CardLastArticles_arrowRight{
         max-width: 1.5rem;
     }
@@ -345,6 +348,10 @@
     }
 }
 @media (max-width: 450px) {
+    #pageHome_CardLastArticles_textsSecionV p{ font-size: 0.7rem;}
+    #pageHome_CardLastArticles_textsSecionV h3{ font-size: 0.8rem;} 
+    #pageHome_CardLastArticles_textsSecionV a {font-size: 0.7rem;}
+
     .dot, .dotScaled, #pageHome_CardLastArticles_arrorLeft, #pageHome_CardLastArticles_arrowRight{
         max-width: 1.2rem;
     }
